removed overflow: hidden property, as it caused style issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 * {
   background-color: rgb(110, 109, 109);
   color: rgb(223, 223, 223);
-  overflow: hidden;
 }
 
 .App {
